--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Website for startups and college students",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ritik Gupta",
